# basketball_league_backend

./: README.md  manage.py  pyproject.toml
fixtures/: set_data.py
league/: admin.py  choices.py  models.py  serializers.py  tests.py  urls.py  views.py
league/migrations/: 0001_initial.py  0002_game_win_team.py  0003_alter_gameteam_score.py  0004_auto_20211001_2215.py
league_backend/: asgi.py  obtain_token.py  settings.py  urls.py  wsgi.py
teams/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
teams/management/commands/: base_setup.py
teams/migrations/: 0001_initial.py  0002_player_height.py
